--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
   <h2>Issue Bot Tasks</h2>
 
   <ul>
-    <li>Debug Ruby Labs</ul>
-    <li>Massage Joe's Back</ul>
-    <li>Archive Steph's Gif collection</ul>
-    <ul>Take out trash</ul>
+    <li>Debug Ruby Labs</li>
+    <li>Massage Joe's Back</li>
+    <li>Archive Steph's Gif collection</li>
+    <li>Take out trash</li>
   </ul>
 
   <h2>Issue Bot Camera Capture Archive</h2>
